--- a/boj_ps/boj_ps.vcxproj.filters
+++ b/boj_ps/boj_ps.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MyTimer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaekJoonQuest.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MyTimer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
