--- a/boj_ps/boj_ps.vcxproj
+++ b/boj_ps/boj_ps.vcxproj
@@ -139,12 +139,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BaekJoonQuest.h" />
+    <ClInclude Include="MyRandom.h" />
     <ClInclude Include="MyTimer.h" />
+    <ClInclude Include="ToyCode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaekJoonQuest.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MyRandom.cpp" />
     <ClCompile Include="MyTimer.cpp" />
+    <ClCompile Include="ToyCode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
