--- a/boj_ps/boj_ps.vcxproj.filters
+++ b/boj_ps/boj_ps.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="MyTimer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ToyCode.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MyRandom.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaekJoonQuest.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="MyTimer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ToyCode.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MyRandom.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
