--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,27 @@
 	// 자세한 내용을 보려면 https://go.microsoft.com/fwlink/?linkid=830387 을(를) 방문하세요.
 	"version": "0.2.0",
 	"configurations": [
+		{
+			"name": "(gdb) 연결",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${fileDirname}/a.out",
+			"MIMode": "gdb",
+			"cwd": "${fileDirname}",
+			"preLaunchTask": "C/C++: g++ 활성 파일 빌드",
+			"setupCommands": [
+				{
+					"description": "gdb에 자동 서식 지정 사용",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				},
+				{
+					"description": "디스어셈블리 버전을 Intel(으)로 설정",
+					"text": "-gdb-set disassembly-flavor intel",
+					"ignoreFailures": true
+				}
+			]
+		}
 
 	]
 }
